--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
+    "vite": "6.3.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.8"
   }
